--- a/Front/package.json
+++ b/Front/package.json
@@ -8,11 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/vue": "^0.17.2",
     "axios": "^1.4.0",
     "gsap": "^3.11.5",
     "tsparticles": "^2.9.3",
     "vue": "^3.2.47",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^4.1.6",
+    "vue3-datepicker": "^0.3.4",
     "vue3-particles": "^2.9.3"
   },
   "devDependencies": {
