--- a/Front/package.json
+++ b/Front/package.json
@@ -13,7 +13,8 @@
     "tsparticles": "^2.9.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vue3-particles": "^2.9.3"
+    "vue3-particles": "^2.9.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
