--- a/Front/package.json
+++ b/Front/package.json
@@ -16,7 +16,8 @@
     "vue-datepicker": "^1.3.0",
     "vue-router": "^4.1.6",
     "vue3-datepicker": "^0.3.4",
-    "vue3-particles": "^2.9.3"
+    "vue3-particles": "^2.9.3",
+    "vuetify": "^3.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
