--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -1,20 +1,23 @@
-FROM node:16-alpine3.17
+FROM node:18-alpine3.18
 
 RUN npm install -g http-server
     
-RUN mkdir /app
+RUN mkdir /Front
 
 WORKDIR /Front
 
 COPY package.json ./
 
+RUN npm cache clean --force
+
+RUN rm -rf node_modules
+
 RUN npm install
 
 COPY . .
 
-RUN npm run dev
+RUN npm run build
 
-EXPOSE 9005
+EXPOSE 8080
 
 CMD ["http-server", "dist"]
-
