--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,21 @@
-version: '3.9'
+version: '3.3'
 services:
-  django:
-    build: .
-    restart: always
-    ports:
-      - "9005:9005"
-    volumes:
-      - .:/app
-    depends_on:
-      - postgres
-
-  postgres:
-    image: postgres:14.3-alpine3.16
-    ports:
-      - "5431:5432"
-    volumes:
-      - ./database:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
   backend:
-
+    build: ./Backend
+    ports:
+      - "9005:8000"
+    depends_on:
+      - db
   frontend:
+    build: ./Front
+    ports:
+      - "9007:8080"
+    depends_on:
+      - backend
+
+  db:
+    image: nouchka/sqlite3:latest
+    stdin_open: true
+    tty: true
+    volumes:
+      - ./db/:/root/db/
